# CTsim

./: CMakeLists.txt  Cargo.toml  raport.md
src/: backprojection.rs  bresenham.rs  dicom_handler.cpp  dicom_handler.hpp  image.rs  iradon.cpp  iradon.hpp  lib.rs  main.cpp  main.rs  patient_info_dialog.cpp  patient_info_dialog.hpp  phantom_generator.cpp  phantom_generator.hpp  pixel.rs  point.rs  radon.cpp  radon.hpp  radon.rs  ram_lak_filter.cpp  ram_lak_filter.hpp  tomograph_window.cpp  tomograph_window.hpp
